--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,13 @@
+body{
+    position: relative;
+    min-height: 100vh;
+    height: auto;
+}
+.vfooter{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
 .vtable {
     width: 100%;
     text-align: center;
